--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 dataType: 'text',
                 type: 'GET',
                 success: function(data){
-                    $("#result").html(data);
+                    return data;
                 }
       });
       return "yo";
