--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       <button name="forwardBtn" type="submit">Submit</button>
     </form>
     <span id="result">$</span>
-    <span id="result1">#</span>
+    <span id="result1">?</span>
     <!----------------------------------->
     <script type="text/javascript">
     
