--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,11 @@
   <body>
     <button id="mybutton" name="forwardBtn" type="submit">Submit</button>
     <span id="result">$</span>
-    <span id="result1">#</span>
+    <span id="result1">%</span>
     <!----------------------------------->
     <script type="text/javascript">
     
-    $('#submitbutton').click(function(){
+    $('#mybutton').click(function(){
         $.ajax({
           url: '/submit',
           dataType: 'text',
