--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     
     $('#mybutton').click(function(){
         $.ajax({
-          url: 'submit',
+          url: '/submit',
           dataType: 'text',
           type: 'GET',
           success: function(data) {
